# photo-quick-sorter

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  dev-bugs-and-errors.md
docs/: COMMITS.md
src/: FolderLocations.cpp  FolderLocations.h  MainMenuPanel.cpp  MainMenuPanel.h  PhotoQuickSorterApp.cpp  PhotoQuickSorterApp.h  PhotoQuickSorterFrame.cpp  PhotoQuickSorterFrame.h  SortPhotosPanel.cpp  SortPhotosPanel.h  config.h  logging.h  photo-quick-sorter.cpp
